@@ -1,3 +1,8 @@
+2009-04-19  Andreas K. Foerster  <info@akfoerster.de>
+
+	* avatar-audio.c (avt_load_raw_audio_data):
+	adjust endianess while loading
+
 2009-04-13  Andreas K. Foerster  <info@akfoerster.de>
 
 	* akfavatar.h, avatar-audio.c (avt_LoadAU_RW)
